Add target="_blank" to external links for improved navigation experience

--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -156,15 +156,15 @@
                     extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i> <b>19</b>, e2400330
                     (2024).
                     <br>
-                    <a
-                        href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
+                    <a href="https://doi.org/10.1080/17452759.2024.2400330"
+                        target="_blank">https://doi.org/10.1080/17452759.2024.2400330</a>.
                     <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
 
                     <br>
                     <br>
                     <i class="fa-brands fa-square-github"></i>
-                    GitHub Repository: <a
-                        href="https://github.com/KORINZ/in-silico-bioink-viability-prediction">https://github.com/KORINZ/in-silico-bioink-viability-prediction
+                    GitHub Repository: <a href="https://github.com/KORINZ/in-silico-bioink-viability-prediction"
+                        target="_blank">https://github.com/KORINZ/in-silico-bioink-viability-prediction
                     </a>
 
                 </p>
@@ -192,7 +192,8 @@
 
                 <h3><i class="fa-solid fa-file-pdf"></i></i> 化学工学会第55回秋季大会プレスリリース 注目講演 [1130件中の22件] (2024/08/28)</h3>
 
-                <p><a href="https://www.scej.org/news/detail/23235"> https://www.scej.org/news/detail/23235</a> </p>
+                <p><a href="https://www.scej.org/news/detail/23235" target="_blank">
+                        https://www.scej.org/news/detail/23235</a> </p>
 
 
                 <a class="custom-button" href="../../assets/化学工学会第55回秋季大会注目講演_W308.pdf" target="_blank">
@@ -208,26 +209,27 @@
                     <div class="quick-links-list">
                         <h2><i class="fa-solid fa-user"></i> Links (リンク)</h2>
                         <ul>
-                            <li><a href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en">Google Scholar <i
+                            <li><a href="https://scholar.google.com/citations?user=npFc4MMAAAAJ&hl=en"
+                                    target="_blank">Google Scholar <i class="fas fa-external-link-alt"></i></a></li>
+                            <li><a href="https://orcid.org/0009-0009-2411-9640" target="_blank">ORCID <i
                                         class="fas fa-external-link-alt"></i></a></li>
-                            <li><a href="https://orcid.org/0009-0009-2411-9640">ORCID <i
-                                        class="fas fa-external-link-alt"></i></a></li>
-                            <li><a href="https://www.scopus.com/authid/detail.uri?authorId=59043674900">Scopus ID <i
-                                        class="fas fa-external-link-alt"></i></a></li>
-                            <li><a href="https://www.webofscience.com/wos/author/record/LLK-8213-2024">ResearcherID <i
-                                        class="fas fa-external-link-alt"></i></a></li>
-                            <li><a href="https://www.researchgate.net/profile/Colin-Zhang-9">ResearchGate <i
-                                        class="fas fa-external-link-alt"></i></a></li>
+                            <li><a href="https://www.scopus.com/authid/detail.uri?authorId=59043674900"
+                                    target="_blank">Scopus ID <i class="fas fa-external-link-alt"></i></a></li>
+                            <li><a href="https://www.webofscience.com/wos/author/record/LLK-8213-2024"
+                                    target="_blank">ResearcherID <i class="fas fa-external-link-alt"></i></a></li>
+                            <li><a href="https://www.researchgate.net/profile/Colin-Zhang-9"
+                                    target="_blank">ResearchGate <i class="fas fa-external-link-alt"></i></a></li>
                         </ul>
                     </div>
                     <div class="orcid-image">
                         <figure>
-                            <a href="https://orcid.org/0009-0009-2411-9640">
+                            <a href="https://orcid.org/0009-0009-2411-9640" target="_blank">
                                 <img src="../../assets/ORCID.png" alt="ORCID" width="120"
                                     style="max-width: 100%; height: auto;">
                             </a>
                             <figcaption style="font-size: smaller; text-align: center;">
-                                <a href="https://orcid.org/0009-0009-2411-9640">ORCID: 0009-0009-2411-9640</a>
+                                <a href="https://orcid.org/0009-0009-2411-9640" target="_blank">ORCID:
+                                    0009-0009-2411-9640</a>
                         </figure>
                     </div>
                 </div>
