--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -209,7 +209,7 @@
                 </p>
 
                 <figure style="text-align: center;">
-                    <p><a href="https://doi.org/10.1080/17452759.2024.2400330">
+                    <p><a href="https://doi.org/10.1080/17452759.2024.2400330" target="_blank">
                             <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="600">
                         </a>
                     </p>
@@ -226,8 +226,7 @@
                     </p>
                     <figcaption style="text-align: left;"><strong>図2.
                         </strong>AIを活用した印刷性能（プリンタビリティ）評価フレームワークの概要。アルギン酸（ALG）およびヒアルロン酸（HA）複合インクのレオロジー特性は、サポートベクター回帰（SVR）によってモデリングされ、レオロジー
-                        パラメータを予測する。回帰型のMLPモデルは、ハウスドルフ距離（HD）および細胞生存率を予測するために使用される。HD指標は、印刷構造と設計構造との幾何学的忠実度を定量的に評価し、回帰型CNNはグリッド画像からHD値を直接予測する。<a
-                            href="https://www.biorender.com/" target="_blank">BioRender</a>にて作成。</figcaption>
+                        パラメータを予測する。回帰型のMLPモデルは、ハウスドルフ距離（HD）および細胞生存率を予測するために使用される。HD指標は、印刷構造と設計構造との幾何学的忠実度を定量的に評価し、回帰型CNNはグリッド画像からHD値を直接予測する。
                 </figure>
 
                 <h2>学術論文</h2>
@@ -238,8 +237,8 @@
                         extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i> <b>19</b>, e2400330
                         (2024).
                         <br>
-                        <a
-                            href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
+                        <a href="https://doi.org/10.1080/17452759.2024.2400330"
+                            target="_blank">https://doi.org/10.1080/17452759.2024.2400330</a>.
                         <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
                     <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai.
@@ -248,7 +247,8 @@
                             Journal of
                             Bioprinting</i> <b>10</b>, 4091 (2024).
                         <br>
-                        <a href="https://doi.org/10.36922/ijb.4091">https://doi.org/10.36922/ijb.4091</a>.
+                        <a href="https://doi.org/10.36922/ijb.4091"
+                            target="_blank">https://doi.org/10.36922/ijb.4091</a>.
                         <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
 
@@ -257,7 +257,8 @@
                         through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>
                         <b>7</b>, 3506-3514 (2024).
                         <br>
-                        <a href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
+                        <a href="https://doi.org/10.1021/acsabm.4c00418"
+                            target="_blank">https://doi.org/10.1021/acsabm.4c00418</a>.
                     </li>
                 </ol>
 
@@ -266,40 +267,45 @@
                     <li>化学工学会第90年会、東京理科大学、2025年3月11日～14日<br>
                         講演題目：<u>AIを用いた3Dバイオプリンティングにおける印刷性能最適化</u><br>
                         (学)<b>Zhang Colin</b>・(学)Elvitigala Kelum・(正)境 慎司 <a
-                            href="https://www4.scej.org/meeting/90a/prog/progsearch.html?Ae=Zhang%20Colin"><i
-                                class="fas fa-external-link-alt"></i></a>
+                            href="https://www4.scej.org/meeting/90a/prog/progsearch.html?Ae=Zhang%20Colin"
+                            target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </li>
                     <li>
                         化学工学会第55回秋季大会、北海道大学、2024年9月10日～13日<br>
                         講演題目：<u>機械学習を用いた押出型3Dバイオプリンティングにおける細胞生存率の予測モデリング</u> <b>[<a
-                                href="https://www.scej.org/news/detail/23235/"> 注目講演 (1130件中の22件)</a>]</b><br>
+                                href="https://www.scej.org/news/detail/23235/" target="_blank"> 注目講演
+                                (1130件中の22件)</a>]</b><br>
                         (学)<b>Zhang Colin</b>・(正)岡野 泰則・(正)境 慎司 <a
-                            href="https://www4.scej.org/meeting/55f/prog/progsearch.html?Ae=Zhang%20Colin"><i
-                                class="fas fa-external-link-alt"></i></a>
+                            href="https://www4.scej.org/meeting/55f/prog/progsearch.html?Ae=Zhang%20Colin"
+                            target="_blank"><i class="fas fa-external-link-alt"></i></a>
 
                     </li>
                     <li>化学工学会第53回秋季大会、信州大学、2022年9月14日～16日<br>
                         講演題目：<u>3D押し出しバイオプリンティングに関する流体せん断応力、印刷効率、細胞生存率に関する数値解析</u><br>
                         (学)<b>Zhang Colin</b>・(学)日髙 光將・(正)小嶋 勝・(正)境 慎司・(正)岡野 泰則 <a
-                            href="https://www4.scej.org/meeting/53f/prog/progsearch.html?Ae=Zhang%20Colin"><i
-                                class="fas fa-external-link-alt"></i></a>
+                            href="https://www4.scej.org/meeting/53f/prog/progsearch.html?Ae=Zhang%20Colin"
+                            target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </li>
                 </ol>
 
 
                 <h2>オンラインコース修了証明書</h2>
                 <ul>
-                    <li><a href="https://credentials.edx.org/credentials/de023108bbbb4963a80cb58da484beb3">Computer
+                    <li><a href="https://credentials.edx.org/credentials/de023108bbbb4963a80cb58da484beb3"
+                            target="_blank">Computer
                             Science for Artificial Intelligence <i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://courses.edx.org/certificates/c71f1d7e284248b4a319b8a0022d2cea">CS50AI:
+                    <li><a href="https://courses.edx.org/certificates/c71f1d7e284248b4a319b8a0022d2cea"
+                            target="_blank">CS50AI:
                             Introduction to Artificial Intelligence with Python <i
                                 class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x:
+                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac"
+                            target="_blank">CS50x:
                             Introduction to Computer Science <i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a
-                            href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
+                    <li><a href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course"
+                            target="_blank">Mathematics
                             for Machine Learning: Linear Algebra <i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/">The Git
+                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/"
+                            target="_blank">The Git
                             &
                             Github Bootcamp <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
