--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -132,8 +132,8 @@
 
             <main class="col-lg">
                 <h2><i class="fa-solid fa-compass"></i> 旅行 (Traveling) <a
-                        href="https://uub.jp/j.cgi/lIzehcaIzTnIfTenIipoIIipq/%E3%82%B3%E3%83%AA%E3%83%B3"><i
-                            class="fa-solid fa-external-link"></i></a>
+                        href="https://uub.jp/j.cgi/lIzehcaIzTnIfTenIipoIIipq/%E3%82%B3%E3%83%AA%E3%83%B3"
+                        target="_blank"><i class="fa-solid fa-external-link"></i></a>
                 </h2>
                 <figure class="gallery-image figure-container">
                     <ul class="figure-ul">
