--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -130,8 +130,9 @@
 
             <main class="col-lg">
 
-                <h2><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" style="text-decoration: none;"><i
-                            class="fa-brands fa-square-js" style="color: #f4d640;"></i></a> Yet Another
+                <h2><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"
+                        style="text-decoration: none;"><i class="fa-brands fa-square-js"
+                            style="color: #f4d640;"></i></a> Yet Another
                     Web-based Basic Calculator (再びWEB電卓)
                 </h2>
                 <div id="wrapper">
@@ -241,8 +242,9 @@
 
                 <br>
 
-                <h2><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" style="text-decoration: none;"><i
-                            class="fa-brands fa-square-js" style="color: #e6d35a;"></i></a> Tic-Tac-Toe AI (三目並べ AI)
+                <h2><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"
+                        style="text-decoration: none;"><i class="fa-brands fa-square-js"
+                            style="color: #e6d35a;"></i></a> Tic-Tac-Toe AI (三目並べ AI)
                 </h2>
                 <div class="game-container">
                     <div id="board"></div>
@@ -315,54 +317,62 @@
 
                 <br>
 
-                <h2><a href="https://www.python.org/" style="text-decoration: none;"><i class="fa-brands fa-python"></i>
+                <h2><a href="https://www.python.org/" target="_blank" style="text-decoration: none;"><i
+                            class="fa-brands fa-python"></i>
                     </a>Selected Projects (主なプロジェクト)
                 </h2>
                 <ol start="0">
-                    <li><a href="https://github.com/KORINZ/nhk-news-scraper-gui">NHK News Web Easy Scraper
+                    <li><a href="https://github.com/KORINZ/nhk-news-scraper-gui" target="_blank">NHK News Web Easy
+                            Scraper
                             <i class="fas fa-external-link-alt"></i></a>: 📰 Scraping news articles from NHK News
                         Web
                         Easy and sending a customized quiz to students via LINE Messaging API. It also came with
                         GUI.
                     </li>
-                    <li><a href="https://github.com/KORINZ/sudoku-backtracking-animation">Sudoku Game with
+                    <li><a href="https://github.com/KORINZ/sudoku-backtracking-animation" target="_blank">Sudoku Game
+                            with
                             Backtracking
                             Algorithm Animation
                             <i class="fas fa-external-link-alt"></i></a>: 🔢 ナンプレ×バックトラッキング A classic Sudoku game
                         implementation in Python using the Pygame library that can play a backtracking animation.
                     </li>
-                    <li><a href="https://github.com/KORINZ/athlete-numbers-generator">Athlete Numbers Generator
+                    <li><a href="https://github.com/KORINZ/athlete-numbers-generator" target="_blank">Athlete Numbers
+                            Generator
                             <i class="fas fa-external-link-alt"></i></a>: 🏃‍♀️ (ゼッケンジェネレーター) A program
                         automatically
                         generates competition numbers for athletes based on their names, numberings, starting times,
                         and
                         sponsors.
                     </li>
-                    <li><a href="https://github.com/KORINZ/screen-region-ocr-gui">
+                    <li><a href="https://github.com/KORINZ/screen-region-ocr-gui" target="_blank">
                             Screen Region OCR GUI
                             <i class="fas fa-external-link-alt"></i></a>: 📸 This Python application allows users to
                         perform Optical Character Recognition (OCR) on a selected region of the screen or an
                         imported
                         image.
                     </li>
-                    <li><a href="https://github.com/KORINZ/entry-sheet-auto-filler">Entry Sheet Auto Filler
+                    <li><a href="https://github.com/KORINZ/entry-sheet-auto-filler" target="_blank">Entry Sheet Auto
+                            Filler
                             <i class="fas fa-external-link-alt"></i></a>: 📝 (エントリーシートオートフィラー) A program that
                         automatically fills entry sheet with personal information.
                     </li>
-                    <li><a href="https://github.com/KORINZ/translator-deepl-gtts">Translation and Text-to-Speech
+                    <li><a href="https://github.com/KORINZ/translator-deepl-gtts" target="_blank">Translation and
+                            Text-to-Speech
                             Tool
                             <i class="fas fa-external-link-alt"></i></a>: 🔊 This project contains a script for
                         translating text or documents from one language to another using the DeepL API, and a
                         text-to-speech tool for converting translated text to audio using Google Text-to-Speech
                         (gTTS).
                     </li>
-                    <li><a href="https://github.com/KORINZ/strava-data-visualization-tool">Strava Data Visualization
+                    <li><a href="https://github.com/KORINZ/strava-data-visualization-tool" target="_blank">Strava Data
+                            Visualization
                             Tool
                             <i class="fas fa-external-link-alt"></i></a>: 🏃 This Python tool fetches and visualizes
                         your Strava activity data. You can use it to analyze your running, cycling, swimming, etc.
                         activities.
                     </li>
-                    <li><a href="https://github.com/KORINZ/scale-bar-addition-tool">Scale Bar Addition Tool
+                    <li><a href="https://github.com/KORINZ/scale-bar-addition-tool" target="_blank">Scale Bar Addition
+                            Tool
                             <i class="fas fa-external-link-alt"></i></a>: 🔬 This tool allows you to add a scale bar to
                         microscope images in the .tif format.
                 </ol>
@@ -383,8 +393,8 @@
                     style="width: 100%; height: 375px; overflow: auto; border: 1px solid black; padding: 10px;">
                     <h2 style="font-size: 2.5rem; margin-bottom: 20px; text-align: center;">NHK NEWS WEB EASY スクレイパー
                     </h2>
-                    <p style=" font-size: 1rem;">このツールは、<a
-                            href="https://www3.nhk.or.jp/news/easy/">NHKやさしいことばニュース</a>のウェブサイトから簡易化された日本語のニュース記事を取得し表示するのに役立ちます。ニュースの内容だけでなく、重要な語彙とその発音を抽出し、可能な場合には辞書の定義も提供します。
+                    <p style=" font-size: 1rem;">このツールは、<a href="https://www3.nhk.or.jp/news/easy/"
+                            target="_blank">NHKやさしいことばニュース</a>のウェブサイトから簡易化された日本語のニュース記事を取得し表示するのに役立ちます。ニュースの内容だけでなく、重要な語彙とその発音を抽出し、可能な場合には辞書の定義も提供します。
                     </p>
                     <p style="font-size: 1rem;">始めるには、『作成』ボタンをクリックするだけです。また、『コピー』ボタンを使って内容をクリップボードにコピーすることもできます。</p>
                     <p style="font-size: 1rem;">
@@ -400,7 +410,8 @@
                 <span id="copy-message"></span>
                 <p style="font-size: 0.8rem;">
                     また、このツールのPythonで開発された使いやすいグラフィカルインターフェース版もご覧いただけます。この<a
-                        href="https://github.com/KORINZ/nhk-news-scraper-gui">GitHubリポジトリ</a>でチェックしてみてください。
+                        href="https://github.com/KORINZ/nhk-news-scraper-gui"
+                        target="_blank">GitHubリポジトリ</a>でチェックしてみてください。
                     <br>
                     すべてのニュースコンテンツは、NHK（日本放送協会）によって著作権が保護されています。
                     <br>
