Add icon hover effects for social media and built with icons

--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -229,6 +229,8 @@
     <script src="../../js/sidebar-toggle.js"></script>
     <script src="../../js/calendar.js"></script>
     <script src="../../js/back-to-top-toggle.js"></script>
+    <script src="../../js/icon-hover.js"></script>
+
     <script>
         var galleryImages = document.querySelectorAll('.gallery-image');
         galleryImages.forEach(function (elem) {
