--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -433,6 +433,7 @@
     <script src="../../js/sidebar-toggle.js"></script>
     <script src="../../js/get-nhk-news.js"></script>
     <script src="../../js/copy-code.js"></script>
+    <script src="../../js/icon-hover.js"></script>
 
     <script src="../../js/calendar.js"></script>
     <script src="../../js/back-to-top-toggle.js"></script>
