--- a/templates/common/research.html
+++ b/templates/common/research.html
@@ -245,6 +245,7 @@
     <script src="../../js/sidebar-toggle.js"></script>
     <script src="../../js/calendar.js"></script>
     <script src="../../js/back-to-top-toggle.js"></script>
+    <script src="../../js/icon-hover.js"></script>
 
 
 </body>
