--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -345,6 +345,7 @@
     <script src="../../js/calendar-ja.js"></script>
     <script src="../../js/back-to-top-toggle.js"></script>
     <script src="../../js/copy-code.js"></script>
+    <script src="../../js/icon-hover.js"></script>
 
 </body>
 
