Update greeting text to use code formatting for consistency in homepage

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -141,7 +141,8 @@
 
             <main class="col-lg">
 
-                <h2>私について</h2>
+                <h2> <code id="python-code" class="command" style="color: #333333; font-size: 1.0em;
+                    ">Hello, World!</code></h2>
 
                 <p>チョウ
                     コリン (ZHANG,
