Update personal introduction on Japanese homepage to specify origin details

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -147,7 +147,7 @@
                 <p>チョウ
                     コリン (ZHANG,
                     Colin)
-                    といいます。ニューヨーク市出身です。付加製造と機械学習を専門として研究しており、2020年にカリフォルニア大学サンタバーバラ校で機械工学の学士号を取得した後、大阪大学に進学し、2023年に化学工学の修士号を取得しました。
+                    といいます。米国のニューヨーク市出身です。付加製造と機械学習を専門として研究しており、2020年にカリフォルニア大学サンタバーバラ校で機械工学の学士号を取得した後、大阪大学に進学し、2023年に化学工学の修士号を取得しました。
                 </p>
 
                 <p>これまでの研究を通じて、Python と機械学習のスキルを培ってきました。現在は、機械学習を用いて 3D
