--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -123,8 +123,10 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i
                             class="fa-brands fa-square-js"></i></a>
                     <footer>
-                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2025
-                            <a href="https://github.com/KORINZ">KORINZ</a>. All rights reserved.</span>
+                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i>
+                            <script>document.write(new Date().getFullYear())</script>
+                            <a href="https://github.com/KORINZ">KORINZ</a>. All rights reserved.
+                        </span>
                     </footer>
                 </nav>
 
