Update greeting format in English and Japanese homepages for consistency

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -143,8 +143,7 @@
 
             <main class="col-lg">
 
-                <h2> <code id="python-code" class="command" style="color: #333333; font-size: 1.0em;
-                    ">Hello, World!</code></h2>
+                <h2> >>> Hello, World!</h2>
 
                 <p>チョウ
                     コリン (ZHANG,
