Add new publication entry to English and Japanese homepages

--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -234,6 +234,11 @@
 
                 <h2>学術論文</h2>
                 <ol>
+                    <li><b>Colin Zhang</b>, Kelum Elvitigala, and Shinji Sakai.
+                        AI-powered printability evaluation
+                        framework for 3D bioprinting using Hausdorff distance metrics. <i>Biofabrication</i>, In Press
+                        (2026).
+                    </li>
                     <li><b>Colin Zhang</b>, Kelum Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         Machine learning-based prediction and optimisation framework for as-extruded cell viability
                         in
