--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -223,7 +223,7 @@
                     </figcaption>
                 </figure>
                 <figure style="text-align: center;">
-                    <p><a href="">
+                    <p><a href="https://doi.org/10.1088/1758-5090/ae288c" target="_blank">
                             <img src="../../static/GraphicalAbstract2.png" alt="GraphicalAbstract2" width="800">
                         </a>
                     </p>
@@ -238,6 +238,9 @@
                         AI-powered printability evaluation
                         framework for 3D bioprinting using Hausdorff distance metrics. <i>Biofabrication</i>, In Press
                         (2026).
+                        <br>
+                        <a href="https://doi.org/10.1088/1758-5090/ae288c"
+                            target="_blank">https://doi.org/10.1088/1758-5090/ae288c</a>.
                     </li>
                     <li><b>Colin Zhang</b>, Kelum Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         Machine learning-based prediction and optimisation framework for as-extruded cell viability
